# coflux

./: .dockerignore  Dockerfile  README.md
.github/workflows/: ci.yml  cli.yml  docs.yml  python_adapter.yml  python_client.yml  release.yml  server.yml
adapters/python/: CHANGELOG.md  README.md  pyproject.toml
adapters/python/coflux/: __init__.py  __main__.py  _version.py  context.py  decorators.py  discovery.py  dispatcher.py  errors.py  executor.py  input.py  metric.py  models.py  output.py  prompt.py  protocol.py  serialization.py  state.py  streams.py  target.py
cli/: CHANGELOG.md  README.md  go.mod  go.sum
clients/python/: CHANGELOG.md  pyproject.toml
docs/: docusaurus.config.ts  epoch-databases.md  package-lock.json  package.json  sidebars.ts
docs/docs/: assets.md  authentication.md  blobs.md  caching.md  cli_config.md  cli_reference.md  concepts.md  concurrency.md  deferring.md  examples.md  executions.md  groups.md  inputs.md  intro.md  logging.md  memoising.md  memoizing.md  metrics.md  pools.md  python_reference.md  recurring.md  retries.md  select.md  sensors.md  serialization.md  server_config.md  stubs.md  suspense.md  timeouts.md  workflows.md
examples/: README.md
examples/edge_detection/: .dockerignore  Dockerfile  README.md  coflux  pyproject.toml
examples/edge_detection/app/: workflows.py
examples/pandas_etl/: README.md  mise.toml  pyproject.toml
examples/pandas_etl/app/: workflows.py
examples/slack_bot/: Dockerfile  README.md  mise.toml  pyproject.toml
examples/slack_bot/slackbot/: workflows.py
examples/wikipedia/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/wikipedia/wikipedia/: workflows.py
frontend/: .gitignore  esbuild.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  assets.ts  blobs.ts  graph.ts  main.ts  models.ts  style.css  topics.ts  utils.ts
scripts/: extract-release-notes.py  lint-changelog.py  next-dev-version.py
server/: .gitignore  CHANGELOG.md  README.md  mix.exs
server/src/: App.tsx  api.ts  models.ts  (+1 more)
tests/: conftest.py  test_assets.py  test_auth.py  test_blobs.py  test_caching.py  test_epochs.py  test_execution.py  test_inputs.py  test_log_partitioning.py  test_logging.py  test_pools.py  test_reconnect.py  test_recurrent.py  test_retries.py  test_scheduling.py  test_streams.py  test_timeout.py  test_versioning.py  test_workspaces.py
(+263 files in other folders)
