[project]
name = "edge-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coflux",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.4",
    "scikit-image>=0.25.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
