[project]
name = "pandas-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coflux",
    "faker>=37.4.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
]

[tool.uv.sources]
coflux = { path = "../../clients/python", editable = true }

[tool.pyright]
venvPath = "."
venv = ".venv"
