[project]
name = "slack-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coflux",
 "slack-sdk>=3.35.0",
]

[tool.uv.sources]
coflux = { path = "../../clients/python", editable = true }

[tool.pyright]
venvPath = "."
venv = ".venv"
