[project]
name = "wikipedia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "coflux",
    "nltk>=3.9.1",
    "requests>=2.32.4",
]

[tool.uv.sources]
coflux = { path = "../../clients/python", editable = true }

[tool.pyright]
venvPath = "."
venv = ".venv"
